_sass/_custom.scss
.center {
  margin: 0 auto;
  text-align: center;
}

.collapse{
  display:inline-block;
}
.collapse + input{
  display:none;
}
.collapse + input + *{
  display:none;
}
.collapse+ input:checked + *{
  display:inline-block;
}

.inline-list {
  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    li {
      display: inline;
    }
  }
}

hr {
  width: 25%;
  margin: 0 auto;
  margin-bottom: $spacing-unit*1.2;
  margin-top: $spacing-unit;
}

.banner {
  height: 500px;
  span {
    color: $back-color;
    letter-spacing: -1px;
    display: inline-block;
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
    padding: 5px;
  }
  h1 {
    padding-top: 200px;
    @extend .center;
    margin: $spacing-unit/2;
  }
  p {
    @extend .center;
    margin: $spacing-unit/2;
  }
  @include media-query($on-laptop) {
    h1 {
      padding-top: 100px;
    }
  }
}

.white-back {
  background-color: $back-color;
}

.bg {
  background-image: url(/assets/images/home/b.jpg);
  background-position: left bottom;
  background-repeat: no-repeat;
  background-size: cover;

  position: fixed;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  z-index: -1;
  -webkit-transform: translateZ(0);
  pointer-events: none;
}

.services {
  text-align: center;
  h3 {
    font-style: italic;
  }
  .fa-home, .fa-usd, .fa-check {
    color: $brand-color;
  }
}

.home-images {
  position: relative;
  width: 100%; /* for IE 6 */
  text-align: right;

  h2 {
    color: $brand-color;
    font-weight: $small-weight;
    position: absolute;
    bottom: 40%;
    right: 5%;
    width: 100%;
  }

  p {
    color: $back-color;
    position: absolute;
    text-align: left;
    font-size: $body-size;
    font-weight: $small-weight;
    bottom: 5%;
    right: 5%;
    width: 100%;
  }

  span {
    display:inline-block;
    float: right;
    max-width: 70%;
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
  }

  @include media-query($on-laptop) {
    text-align: left;

    h2 {
      position: relative;
      line-height: 1;
      padding: 0;
      margin: 0;
      margin-left: 15px;
    }
    p {
      position: relative;
      left: auto;
      right: auto;
      color: $gray-color;
      font-size: $small-size;
      border: 1px solid $gray-color;
    }
    span {
      margin: 0 auto;
      max-width: 100%;
      float: none;
      background: $back-color;
    }
  }
}

.button {
  display: inline-block;
  font-size: $body-size;
  text-align: center;
  margin: 0 auto;
  min-width: 175px;
  min-height: 30px;
  line-height: 30px;
  white-space: nowrap;

  transition: all 0.3s ease 0s;
  -o-transition: all 0.3s ease 0s;
  -moz-transition: all 0.3s ease 0s;
  -webkit-transition: all 0.3s ease 0s;

  &:visited, &:hover, &:focus {
    text-decoration: none;
  }
}

.button-brand {
  color: white;
  background-color: $brand-color;
  border: 2px solid white;
  border-radius: 15px;

  &:visited, &:hover, &:focus {
    color: $brand-color;
    background-color: white;
    border: 2px solid $brand-color;
  }
}

.no-bullets {
  ul, ol {
    list-style-type: none;
  }
}

.brand-color {
  color: $brand-color;
}

.plain-link {
  color: $text-color;
  text-decoration: none;

  &:visited {
   color: $text-color;
   text-decoration: none;
  }
}

.big-button {
  font-size: 40px;
  width: 50%;
  border: 2px solid $brand-color;
  border-radius: 30px;

  &:hover, &:hover, &:focus {
    color: white;
    background-color: $brand-color;
    border: 2px solid white;
  }
}

.mc-field-group ol, ul {
  margin-bottom: 20px;
}

.mc-field-group li {
  margin: 0;
  padding: 3px;
}

.mc-field-group ul, ol {
  display: inline-block;
  margin: 0 auto;
}

.mc-field-group li {
  text-align: left;
}

.iframe-wrapper  {width:100%;height:100%;margin:0 auto;background:#CCC}
.h_iframe        {position:relative;}
.h_iframe .ratio {display:block;width:100%;height:auto;}
.h_iframe iframe {position:absolute;top:0;left:0;width:100%; height:100%;}

